programa de newton rapshon

--- a/primer_parcial/newton-rapshon.ipynb
+++ b/primer_parcial/newton-rapshon.ipynb
@@ -2,10 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4.0, 0.0)\n",
+      "se termino\n",
+      "4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def funcion(x):\n",
+    "    return math.pow(x,2)-(4*x)\n",
+    "def derivada(x):\n",
+    "    return (2*x)-4\n",
+    "\n",
+    "\n",
+    "def raices(a,b,c):\n",
+    "    \n",
+    "   \n",
+    "    return ((-b+math.sqrt((math.pow(b,2)-(4*a*c))))/2*a,(-b-math.sqrt((math.pow(b,2)-(4*a*c))))/2*a) \n",
+    "\n",
+    "print(raices(1,-4,0))\n",
+    "\n",
+    "\n",
+    "def newton(inicial):\n",
+    "    return inicial-( funcion(inicial)/derivada(inicial))\n",
+    "\n",
+    "\n",
+    "inicial=8\n",
+    "anterior=0;\n",
+    "while True:\n",
+    "    inicial=newton(inicial)\n",
+    "    if inicial!=anterior:\n",
+    "        inicial=newton(inicial)\n",
+    "        anterior=inicial\n",
+    " \n",
+    "    else:\n",
+    "        print(\"se termino\")\n",
+    "        print(inicial)\n",
+    "        break\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +59,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
   "orig_nbformat": 4,
