ajuste en funcion de gradiente descendiente

--- a/primer_parcial/newton-rapshon.ipynb
+++ b/primer_parcial/newton-rapshon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,6 +10,9 @@
      "output_type": "stream",
      "text": [
       "(4.0, 0.0)\n",
+      "4.2666666666666675\n",
+      "4.000061036087587\n",
+      "4.0\n",
       "se termino\n",
       "4.0\n"
      ]
@@ -43,6 +46,7 @@
     "    if inicial!=anterior:\n",
     "        inicial=newton(inicial)\n",
     "        anterior=inicial\n",
+    "        print(inicial)\n",
     " \n",
     "    else:\n",
     "        print(\"se termino\")\n",
