--- a/primer_parcial/gradiente-descendiente.ipynb
+++ b/primer_parcial/gradiente-descendiente.ipynb
@@ -1037,12 +1037,11 @@
     "x=.5\n",
     "y=.5\n",
     "\n",
-    "print(parcial_x(.4,.3))\n",
-    "print(\"---\")\n",
+    "\n",
     "\n",
     "for i in range(1000):\n",
     "    print(x,y)\n",
-    "    x,y=gradiente(x,y,.005)\n",
+    "    x,y=gradiente(x,y,..1)\n",
     "    "
    ]
   }
